p2/confs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: cmariot/app1
        ports:
        - containerPort: 80 #internal port


# Pod status still ContainerCreating :
# kubectl get events --sort-by=.metadata.creationTimestamp

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 3
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: cmariot/app2
        ports:
        - containerPort: 80 #internal port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
spec:
  selector:
    matchLabels:
      app: app3
  replicas: 1
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: cmariot/app3
        ports:
        - containerPort: 80 #internal port
