p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1  # Assuming you're using networking.k8s.io/v1 API version

# apiVersion: extensions/v1beta1 (uncomment if using older API version)
kind: Ingress
metadata:
  name: multi-host-ingress
spec:
  rules:
  - host: app1
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app1
              port:
                number: 80
        # service:
        # - serviceName: app1  # Replace with your service name
        #   servicePort: 8080
  # - host: host2.example.com (uncomment and configure similarly)
  # - host: host3.example.com (uncomment and configure similarly)
